<resources>
    <string name="app_name">ToDo App</string>
    <string name="add_note">Add note</string>
    <string name="save_note">Save note</string>
    <string name="new_note">New note</string>
    <string name="home_screen_header">Dashboard</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="note_details_screen_header">Note Details</string>


    <string name="splash_header_1">To</string>
    <string name="splash_header_2">Do</string>
    <string name="splash_header_3">App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>