<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashActivity"
    android:gravity="center"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvHeader"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_header_1"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            />
        <TextView
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_header_2"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:textStyle="bold"
            />
        <TextView
            style="@style/AppTheme.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_header_3"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:textStyle="bold"
            />

    </LinearLayout>


</RelativeLayout>
</layout>