<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notes.ManageNoteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/screen_default_horizontal_margin"
            android:layout_marginVertical="@dimen/screen_default_vertical_margin">

            <RelativeLayout
                android:id="@+id/mainContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvHeader"
                    style="@style/AppTheme.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/new_note"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etTitle"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTheme.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/title"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etNote"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etTitle"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTheme.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/add_note"
                        />

                </com.google.android.material.textfield.TextInputLayout>



            </RelativeLayout>


            <TextView
                android:id="@+id/btnSaveNote"
                style="@style/AppTheme.BlueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/mainContainer"
                android:background="@color/blue"
                android:enabled="false"
                android:text="@string/save_note"
                />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

</layout>